<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/carb_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/temp_no_carbs"
            android:textSize="50sp" />

        <LinearLayout
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/search_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button" />

        <Button
            android:id="@+id/enter_weight_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Weight" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.43"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/carb_history_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carb_history_button" />

        <Button
            android:id="@+id/weight_history_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight_history_button" />
    </LinearLayout>

</LinearLayout>