<?xml version="1.0" encoding="utf-8"?>
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/addFood_foodName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="vertical" >

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:stretchColumns="*" >

                        <TableRow
                            android:id="@+id/tableRowHeadings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp" >

                            <TextView
                                android:id="@+id/textViewHeading1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:text="@string/select" />

                            <TextView
                                android:id="@+id/textViewHeading2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/amount" />

                            <TextView
                                android:id="@+id/textViewHeading3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/description" />

                            <TextView
                                android:id="@+id/textViewHeading4"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="8dp"
                                android:text="@string/gram_weight" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <CheckBox
                                android:id="@+id/checkBox1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dp" />

                            <EditText
                                android:id="@+id/editText1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/one" />

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/grams" />

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="8dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="8dp"
                                android:text="@string/grams100" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <CheckBox
                                android:id="@+id/checkBox2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dp" />

                            <EditText
                                android:id="@+id/editText2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/one" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="" />

                            <TextView
                                android:id="@+id/textView22"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="8dp"
                                android:text="" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <CheckBox
                                android:id="@+id/checkBox3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dp" />

                            <EditText
                                android:id="@+id/editText3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/one" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="" />

                            <TextView
                                android:id="@+id/textView32"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="8dp"
                                android:text="" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <CheckBox
                                android:id="@+id/checkBox4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dp" />

                            <EditText
                                android:id="@+id/editText4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/one" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/custom_weight" />

                            <EditText
                                android:id="@+id/editText_customWeight"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:paddingLeft="10dp"
                                android:paddingRight="8dp"
                                android:text="" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/linearLayout9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/totalCarbs_tv"
                            android:layout_width="122dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/total_carbs" />

                        <TextView
                            android:id="@+id/totalCarbs_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:gravity="right"
                            android:textSize="30dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/update_total_button" />

                        <Button
                            android:id="@+id/button1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/add_item_button" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>